Resolve imgLeft stretch issue in Safari

--- a/src/components/imgLeft/imgLeft.css
+++ b/src/components/imgLeft/imgLeft.css
@@ -23,7 +23,6 @@
 
 .imgLeft--padding {
     padding: 1em;
-    display: flex;
     align-content: center;
     justify-content: center;
     background-color: var(--black);
